@@ -5,7 +5,10 @@ Changelog
 1.11.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Details view: refactor template binding for easeier subclassing.
+  By moving the template binding to python code, subclasses can still render
+  the default template conditionally.
+  [jone]
 
 
 1.11.1 (2015-09-09)
